--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -39,5 +39,10 @@
         <version>3.1.1.RELEASE</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.google.inject.extensions</groupId>
+    	<artifactId>guice-assisted-inject</artifactId>
+    	<version>2.0</version>
+	</dependency>
   </dependencies>
 </project>
