--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -44,5 +44,10 @@
     	<artifactId>guice-assisted-inject</artifactId>
     	<version>2.0</version>
 	</dependency>
+	<dependency>
+    	<groupId>com.google.guava</groupId>
+    	<artifactId>guava</artifactId>
+    	<version>21.0</version>
+	</dependency>
   </dependencies>
 </project>
