--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -44,5 +44,10 @@
     	<artifactId>guava</artifactId>
     	<version>21.0</version>
 	</dependency>
+  	<dependency>
+  		<groupId>com.fasterxml.jackson.core</groupId>
+  		<artifactId>jackson-databind</artifactId>
+  		<version>2.9.7</version>
+  	</dependency>
   </dependencies>
 </project>
