--- a/data-game-modifier/pom.xml
+++ b/data-game-modifier/pom.xml
@@ -9,5 +9,11 @@
   		<artifactId>data-game-reader</artifactId>
   		<version>1.0</version>
   	</dependency>
+  	<dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-all</artifactId>
+    	<version>1.9.5</version>
+    	<scope>test</scope>
+	</dependency>
   </dependencies>
 </project>
